# Flux

./: .vercelignore  README.md  package-lock.json  package.json  vercel.json
escrowlayer/: Anchor.toml
escrowlayer/programs/escrowlayer/: Cargo.toml
escrowlayer/programs/escrowlayer/src/: lib.rs  state.rs  wormhole.rs
escrowlayer/tests/: escrowlayer.ts
frontend/: next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
frontend/api/: lockFunds.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: Navbar.tsx  SolanaProvider.tsx
frontend/helper/: validateAddr.ts  validateIntent.ts
frontend/helpers/: destChainId.ts  getOrCreateTokenAccount.ts  tokenMint.ts
frontend/helpers.ts/: getOrCreateTokenAccount.ts
frontend/hooks/: useCreateIntent.ts  useProgram.ts
frontend/idl/: escrowlayer.json
frontend/lib/: prisma.ts
frontend/prisma/: schema.prisma
frontend/provider/: react-query-provider.tsx
frontend/types/: chain.ts  escrowlayer.ts
shared/: package.json  tsconfig.json
shared/src/: index.ts
shared/src/types/: chains.ts  idl.ts  index.ts  intent.ts  tokens.ts
shared/src/utils/: convert.ts
solver/: package-lock.json  package.json  tsconfig.json  vitest.config.ts
solver/idl/: escrowlayer.json
solver/src/: index.ts  lib.ts  setup.ts
solver/src/auction/: index.ts
solver/src/gas/: convert.ts  estimateGas.ts  estimateSolanaDelivery.ts  index.ts
solver/src/gasEstEngine/: convert.ts  estimateGas.ts  estimateGasSolana.ts  index.ts
solver/src/helpers/: calculations.ts  chainMap.ts  getChainClient.ts  (+7 more)
(+15 files in other folders)
